「3-静的ファイルを提供してページを追加する」 手順3-2まで完了

--- a/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/index.html
+++ b/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/index.html
@@ -1,9 +1,10 @@
 ﻿<html>
 <head>
     <title>{{ title }}</title>
+    <!-- __init__.py からの相対パス? -->
+    <link rel="stylesheet" type="text/css" href="/static/site.css" />
 </head>
 <body>
-    <strong>{{ message }}</strong>{{ content }}
-    <!--test-->
+    <span class="message">{{ message }}</span>{{ content }}
 </body>
 </html>
