--- a/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/about.html
+++ b/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/about.html
@@ -1,12 +1,4 @@
-﻿<html>
-<head>
-    <title>{{ title }}</title>
-    <link rel="stylesheet" type="text/css" href="/static/site.css" />
-</head>
-<body>
-    <div>
-        <a href="home">Home</a>
-        {{content}}
-    </div>
-</body>
-</html>
+﻿{% extends "layout.html" %}
+{% block content %}
+{{content}}
+{% endblock %}
