--- a/ptyhonWebApp/ptyhonWebApp/HelloFlask/static/site.css
+++ b/ptyhonWebApp/ptyhonWebApp/HelloFlask/static/site.css
@@ -2,3 +2,28 @@
     font-weight: 600;
     color: blue;
 }
+
+.navbar {
+    background-color: lightslategray;
+    font-size: 1em;
+    color: white;
+    padding: 8px 5px;
+}
+
+    .navbar a {
+        text-decoration: none;
+        color: inherit;
+    }
+
+.navbar-brand {
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.navbar-item {
+    font-variant: small-caps;
+    margin-left: 30px;
+}
+
+.body-content {
+    padding: 5px;
