--- a/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/index.html
+++ b/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/index.html
@@ -1,13 +1,4 @@
-﻿<html>
-<head>
-    <title>{{ title }}</title>
-    <!-- __init__.py からの相対パス? -->
-    <link rel="stylesheet" type="text/css" href="/static/site.css" />
-</head>
-<body>
-    <span class="message">{{ message }}</span>{{ content }}
-    <div>
-        <a href="about">About</a>
-    </div>
-</body>
-</html>
+﻿{% extends "layout.html" %}
+{% block content %}
+<span class="message">{{ message }}</span>{{ content }}
+{% endblock %}
