viewのクラス、フォルダ分け方法を確認

--- a/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/layout.html
+++ b/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/layout.html
@@ -11,6 +11,7 @@
         <a href="/" class="navbar-brand">Hello Flask</a>
         <a href="{{url_for('home')}}" class="navbar-item">Home</a>
         <a href="{{url_for('about')}}" class="navbar-item">About</a>
+        <a href="{{url_for('userView')}}" class="navbar-item">userView</a>
     </div>
     <div class="body-content">
         {% block content %}
