blockを複数定義する方法を確認

--- a/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/about.html
+++ b/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/about.html
@@ -1,4 +1,10 @@
 ﻿{% extends "layout.html" %}
 {% block content %}
 {{content}}
-{% endblock %}
+{% endblock content %}
+
+{% block subcontent%}
+<div>
+    <span>about.htmlで表示するサブコンテンツです。</span>
+</div>
+{% endblock subcontent%}
