部分コントロールの作り方、変数の渡し方(with,endwith)を確認

--- a/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/index.html
+++ b/ptyhonWebApp/ptyhonWebApp/HelloFlask/templates/index.html
@@ -6,5 +6,8 @@
 {% block subcontent%}
 <div>
     <span>index.htmlで表示するサブコンテンツです。</span>
+    {% with name = 'testName', msg = message %}
+    {% include "usercontrol.html" %}
+    {% endwith %}
 </div>
 {% endblock subcontent%}
